--- a/example.html
+++ b/example.html
@@ -11,6 +11,7 @@
 		/>
 	</head>
 	<body>
+		<!-- run npm run bundle to get arabic-services.umd.js file -->
 		<script src="./dist/umd/arabic-services.umd.js"></script>
 		<script>
 			console.log('ArabicServices:', ArabicServices);
