add tashfeer to tests

--- a/example.html
+++ b/example.html
@@ -23,6 +23,7 @@
 					`الخَيْـلُ وَاللّيْـلُ وَالبَيْـداءُ تَعرِفُني وَالسّيفُ وَالرّمحُ والقرْطاسُ وَالقَلَـمُ`,
 				),
 			);
+			console.log('Tashfeer:', ArabicServices.tashfeer('هذا النص مشفر'));
 			console.log('ARABIC_DOTLESS_DICT:', ArabicServices.constants.ARABIC_DOTLESS_DICT);
 			console.log('STANDARD_LETTERS:', ArabicServices.constants.STANDARD_LETTERS);
 			console.log('TASHKEEL:', ArabicServices.constants.TASHKEEL);
