add ARABIC_PREFIXES + SUFFIXES & PANNED_WORDS

--- a/example.html
+++ b/example.html
@@ -31,6 +31,9 @@
 			console.log('STANDARD_LETTERS:', ArabicServices.constants.STANDARD_LETTERS);
 			console.log('TASHKEEL:', ArabicServices.constants.TASHKEEL);
 			console.log('PRONOUNCED_LETTERS:', ArabicServices.constants.PRONOUNCED_LETTERS);
+			console.log('ARABIC_PREFIXES:', ArabicServices.constants.ARABIC_PREFIXES);
+			console.log('ARABIC_SUFFIXES:', ArabicServices.constants.ARABIC_SUFFIXES);
+			console.log('PANNED_WORDS:', ArabicServices.constants.PANNED_WORDS);
 		</script>
 	</body>
 </html>
