add examples in README & example.html

--- a/example.html
+++ b/example.html
@@ -25,7 +25,10 @@
 				),
 			);
 			console.log('Tashfeer:', ArabicServices.tashfeer('هذا النص مشفر'));
+			console.log('tashfeerPannedWords:', ArabicServices.tashfeerPannedWords('جيش العدو يقتل الأطفال'));
 			console.log('wordToLetters:', ArabicServices.wordToLetters('شجرة'));
+			console.log('removeArabicAffixes:', ArabicServices.removeArabicAffixes('موظفين'));
+
 			console.log('-------- Constants --------');
 			console.log('ARABIC_DOTLESS_DICT:', ArabicServices.constants.ARABIC_DOTLESS_DICT);
 			console.log('STANDARD_LETTERS:', ArabicServices.constants.STANDARD_LETTERS);
