--- a/example.html
+++ b/example.html
@@ -24,6 +24,10 @@
 					`الخَيْـلُ وَاللّيْـلُ وَالبَيْـداءُ تَعرِفُني وَالسّيفُ وَالرّمحُ والقرْطاسُ وَالقَلَـمُ`,
 				),
 			);
+			console.log(
+				'toOldArabicAndTashfeerPannedWords:',
+				ArabicServices.toOldArabicAndTashfeerPannedWords('جيش العدو يقتل الأطفال'),
+			);
 			console.log('Tashfeer:', ArabicServices.tashfeer('هذا النص مشفر'));
 			console.log('tashfeerPannedWords:', ArabicServices.tashfeerPannedWords('جيش العدو يقتل الأطفال'));
 			console.log('wordToLetters:', ArabicServices.wordToLetters('شجرة'));
